[metadata]
name = emscripten-forge-server
version = attr: emscripten_forge_server._version.__version__
description = A server for emscipten packages
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
author = Martin Renou
author_email = martin.renou@quantstack.net
url = https://github.com/martinRenou/emscripten-forge-server
platforms = Windows, Linux, Mac OS X
keywords = server, fastapi, pluggy, plugins

[bdist_wheel]
universal = 1

[options]
include_package_data = True
packages = find:
python_requires = >=3.7

install_requires =
  fps
  fps-uvicorn

[options.entry_points]
fps_router =
    emscripten_forge_server_router = emscripten_forge_server.routes
fps_config =
    emscripten_forge_server_config = emscripten_forge_server.config

console_scripts =
    emscripten_forge_server = fps_uvicorn.cli:app
